--- a/ImprovedUI/Public/Game/GUI/StateMachine_c.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine_c.xaml
@@ -1441,6 +1441,11 @@
                         <ls:SetSubstate Name="CharacterPanel"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
+                <ls:StateEvent Name = "ToggleWaypoints">
+                    <ls:StateEvent.Actions>
+                        <ls:SetSubstate Name="JournalMap" Metadata="Waypoints"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
                 <ls:StateEvent Name = "ShowInterrupts">
                     <ls:StateEvent.Actions>
                         <ls:SetSubstate Name="CharacterPanel" Metadata="Interrupts"/>
